# daily-report

./: .gitignore  daily_report.py  index.html  main.py  pyproject.toml  requirements.txt  run_daily.bat
.github/workflows/: daily_report.yml
data/: todos.json
data/knowledge/: 企业制度FAQ.txt
examples/: debug_ui.py  test_conversation.py  test_e2e.py  test_rag.py
src/: config.py  logging_setup.py  metrics.py  news_fetcher.py  pre_launch.py  retry_utils.py  session_manager.py  thought_recorder.py  tool_governance.py  vision_adapter.py
src/agents/: query_rewriter.py  retriever.py  router.py  solver.py
src/feishu/: crypto.py
src/graph/: streaming.py  workflow.py
src/memory/: checkpoint_store.py
src/rag/: index_builder.py  retriever_engine.py
src/tools/: email_sender.py  notify.py  todo.py  weather.py
src/ui/: gradio_app.py
