[project]
name = "workmate-agent"
version = "2.0.0"
description = "WorkMate Agent - 智能职场个人行政助理"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "chromadb>=0.5.0",
    "requests>=2.31.0",
    "schedule>=1.2.0",
    "langchain-text-splitters>=0.2.0",
    "tiktoken>=0.7.0",
    "gradio>=4.44.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
    "pycryptodome>=3.20.0",
    "tenacity>=8.0.0",
    "lark-oapi>=1.0.0",
    "psutil>=5.9.0",
]
